<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingHorizontal="@dimen/content_padding"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.LoginFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        app:cardElevation="0dp"
        android:layout_marginTop="@dimen/logo_marginTop">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_diamond"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/logo_name"
            style="@style/Login.Main"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        style="@style/Login.Header"
        android:text="@string/login_header"
        android:layout_marginTop="@dimen/login_header_marginTop"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="@dimen/btn_rounded_corners"
        app:cardBackgroundColor="@color/app_greyscale_input"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/login_field_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/login_username_card_marginStart"
                android:background="@android:color/transparent"
                android:hint="@string/login_field_username"
                android:maxLength="64"
                android:textColorHint="@color/app_greyscale_placeholder" />
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_close"
                android:layout_marginStart="-40dp"
                android:visibility="gone"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/app_greyscale_input"
        android:layout_marginTop="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/login_field_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/login_field_password"
                android:maxLength="64"
                android:background="@android:color/transparent"
                android:textColorHint="@color/app_greyscale_placeholder"
                android:layout_marginStart="@dimen/login_username_card_marginStart"
                />
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_close"
                android:layout_marginStart="-40dp"
                android:visibility="gone"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/login_message_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:textColor="@color/app_chilli_600"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/login_enter_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_password"
        android:textAllCaps="false"
        android:text="@string/login_enter_btn"
        android:layout_marginTop="55dp"
        android:backgroundTint="@color/app_newblack"
        />
    <TextView
        android:id="@+id/login_enter_problem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_enter_problem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_enter_btn"
        android:gravity="center_horizontal"
        style="@style/Login.Problems"
        android:layout_marginTop="26dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_register_link"
        app:layout_constraintTop_toBottomOf="@id/login_enter_problem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        style="@style/Login.Header"
        android:gravity="center_horizontal"
        />




</androidx.constraintlayout.widget.ConstraintLayout>